<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <FrameLayout
        android:id="@+id/fl_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

    <include layout="@layout/layout_horizontal_divider"/>

    <RadioGroup
        android:id="@+id/rg_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/default_white"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_library"
            style="@style/main_rg"
            android:drawableTop="@drawable/checked_library_rb"
            android:text="@string/library"
            />

        <RadioButton
            android:id="@+id/rb_homepage"
            style="@style/main_rg"
            android:drawableTop="@drawable/checked_homepage_rb"
            android:text="@string/homepage"/>

        <RadioButton
            android:id="@+id/rb_my"
            style="@style/main_rg"
            android:drawableTop="@drawable/checked_my_rb"
            android:text="@string/my"
            />
    </RadioGroup>
</LinearLayout>
